fix: products detail-description alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2380,7 +2380,7 @@ html, body, .homepage-body {
   .detail-description {
     text-align: justify !important;
     line-height: 1.6;
-    margin-top: 5px !important;
+    margin-top: 0px !important;
     margin-bottom: 20px !important;
     width: 100% !important;
     max-width: 100% !important;
